--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "/chat_backend/server.js",
+        "src": "/index.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/chat_backend/server.js"
+        "dest": "/index.js"
       }
     ]
   }
